frame/support/test/tests/pallet_ui/step_011.rs
#[frame_support::pallet]
mod pallet {
	#[pallet::config]
	pub trait Config: frame_system::Config {}

	#[pallet::pallet]
	pub struct Pallet {}
}

fn main() {
}
